# NCursesSnake

./: .gitignore  CMakeLists.txt  README.md  nSnake.cpp  snake.cpp
src/: nSnake.cpp  snake.cpp  snake.h
